<resources>
    <string name="app_name">일기장</string>
    <string name="loginUser">아이디</string>
    <string name="loginPassword">비밀번호</string>
    <string name="memId">아이디</string>
    <string name="memPw">비밀번호</string>
    <string name="memPwRe">비밀번호확인</string>
    <string name="memNm">회원명</string>
    <string name="email">이메일</string>
    <string name="mobile">휴대전화</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="mypage">마이페이지</string>
    <string name="write_diary">일기쓰기</string>
    <string name="findLoginUser">아이디 찾기</string>
    <string name="findLoginPassword">비밀번호 찾기</string>
    <string name="joinUser">회원가입</string>
    <!-- 에러 메세지 -->
    <string name="requiredLoginUser">아이디를 입력하세요.</string>
    <string name="requiredLoginPassword">비밀번호를 입력하세요.</string>

    <!-- 다이얼로그 -->
    <string name="confirm">확인</string>
    <string name="confirm_yes">예</string>
    <string name="confirm_no">아니오</string>
    <string name="confirm_cancel">취소</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>