<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F3FA"
    android:orientation="vertical"
    tools:context=".member.JoinUserFragment">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/joinTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/joinUser"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/joinMemId"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/memId"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/joinMemPw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/memPw"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/joinMemPwRe"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/memPwRe"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/joinMemNm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/memNm"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/joinEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/joinMobile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/textbox_border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mobile"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/joinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/submit_btn"
            android:text="@string/joinUser"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>